--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ pyperclip==1.8.2
 pytesseract==0.3.10
 python-xlib==0.29
 python-Levenshtein==0.12.2
-pywin32-ctypes==0.2.0
+pywin32-ctypes>=0.2.1
 PyYAML==6.0.1
 requests==2.31.0
 six==1.16.0
