update configuration settings for appearance, app config, OCR engine, translation languages, and hotkeys

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [APPEARANCE]
-fontsize = 29
+fontsize = 23
 darktheme = true
 selection_color = hotpink
 selection_line_width = 1
 
 [APPCONFIG]
-browser = default
+browser = Chrome
 host = localhost
 port = 0
 
@@ -17,16 +17,17 @@ cardtags = Game2Text
 anki_dictionary = jmdict_english
 
 [OCRCONFIG]
-engine = OCR Space NA
+engine = Tesseract LSTM
 tesseract_language = jpn
 ocr_space_language = jpn
-oem = 3
+oem = 1
 extra_options = "-c chop_enable=T -c use_new_state_cost=F -c segment_segcost_rating=F -c enable_new_segsearch=0 -c language_model_ngram_on=0 -c textord_force_make_prop_words=F -c edges_max_children_per_outline=40"
 
 [TRANSLATIONCONFIG]
 translation_service = Google Translate
-source_lang = ja
-target_lang = en
+source_lang = en
+target_lang = vi
+openai_api_key = 
 
 [LOGCONFIG]
 launchlogwindow = false
@@ -50,7 +51,7 @@ remove_duplicates = false
 remove_spaces = true
 
 [WINDOWS_HOTKEYS]
-refresh_ocr = <ctrl>+q
+refresh_ocr = ctrl+q
 add_to_anki = <shift>+e
 
 [MAC_HOTKEYS]
